syntax = "proto3";

package calculator;
option go_package=".;calculator";

message SumRequest {
    int64 first_number = 1;
    int64 second_number = 2;
}

message SumResponse {
    int64 result = 1;
}

message PrimeNumberDecompositionRequest {
    int32 number = 1;
}

message PrimeNumberDecompositionResponse {
    int32 result = 1;
}

service CalculatorService {
    // Unary
    rpc Sum(SumRequest) returns (SumResponse) {};

    // ServerStreaming
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
}
